--- a/package.json
+++ b/package.json
@@ -2,16 +2,24 @@
   "name": "ts-node-sales-api",
   "version": "1.0.0",
   "description": "",
-  "main": "src/server.ts",
+  "main": "src/shared/http/server.ts",
   "scripts": {
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
     "test": "jest",
-    "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules src/server.ts"
+    "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules src/shared/http/server.ts"
   },
-  "keywords": ["typescript", "node", "jest", "eslint", "babel", "express"],
+  "keywords": [
+    "typescript",
+    "node",
+    "jest",
+    "eslint",
+    "babel",
+    "express"
+  ],
   "author": "Hugo Leonardo <hugoleonardo.dev@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   },
   "devDependencies": {
@@ -20,6 +28,7 @@
     "@babel/node": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-typescript": "^7.16.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.9",
