--- a/ormconfig.json
+++ b/ormconfig.json
@@ -4,5 +4,11 @@
     "port": "5432",
     "username": "postgres",
     "password": "docker",
-    "database": "salesapi"
+    "database": "salesapi",
+    "migrations": [
+        "./src/shared/typeorm/migrations/*.ts"
+    ],
+    "cli": {
+        "migrationsDir": "./src/shared/typeorm/migrations"
+    }
 }
