--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
       "resolveJsonModule": true,
       "experimentalDecorators": true,
       "emitDecoratorMetadata": true,
+      "strictPropertyInitialization": false,
+      "strictNullChecks": true,
       "skipLibCheck": true,
       "forceConsistentCasingInFileNames": true,
       "baseUrl": ".",
