:truck: create update configs with express-async-errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -83,7 +83,7 @@
             },
             {
                 "selector": "classProperty",
-                "format": ["PascalCase", "snake_case"]
+                "format": ["PascalCase", "snake_case", "camelCase"]
             },
             {
                 "selector": "class",
