:truck: update routes with celebrate middlewares and server with celebrate error

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Hugo Leonardo <hugoleonardo.dev@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "celebrate": "^15.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
